--- a/index.html
+++ b/index.html
@@ -43,7 +43,138 @@
                 </ul>
         </nav>
     </header>
-    <div class="container">Container</div>
+    <div class="container-home-xl">
+        <div class="library-items flex wrap gap-10 flex-center-h">
+            <div class="library-item flex flex-column relative">
+            <div class="library-video-poster">
+                <img src="images/poster/1.jpg" alt="Poster video">
+                <i class="fab fa-youtube absolute element-center"></i>
+            </div>
+            <div class="library-vido-meta flex flex-center-v gap-5">
+                <div class="profile-picture">
+                    <img src="images/profil/espero.jpg" alt="">
+                </div>
+                <div class="meta-video">
+                    <div class="video-title">Clonez le réseau social facebook en partant de zéro</div>
+                    <div class="owner-video-fulname">Web Design</div>
+                    <div class="video-meta-data flex">
+                        <div class="video-meta-views">542 views &nbsp;</div>
+                        <div class="video-meta-time"> &nbsp;il y'a 21 heures</div>
+                    </div>
+                </div>
+            </div>
+            </div>
+            <div class="library-item flex flex-column relative">
+            <div class="library-video-poster ">
+                <img src="images/poster/1.jpg" alt="Poster video">
+                <i class="fab fa-youtube absolute element-center"></i>
+            </div>
+            <div class="library-vido-meta flex flex-center-v gap-5">
+                <div class="profile-picture">
+                    <img src="images/profil/espero.jpg" alt="">
+                </div>
+                <div class="meta-video">
+                    <div class="video-title">Clonez le réseau social facebook en partant de zéro</div>
+                    <div class="owner-video-fulname">Web Design</div>
+                    <div class="video-meta-data flex">
+                        <div class="video-meta-views">542 views &nbsp;</div>
+                        <div class="video-meta-time"> &nbsp;il y'a 21 heures</div>
+                    </div>
+                </div>
+            </div>
+            </div>
+             <div class="library-item flex flex-column relative">
+            <div class="library-video-poster">
+                <img src="images/poster/1.jpg" alt="Poster video">
+                <i class="fab fa-youtube absolute element-center"></i>
+            </div>
+            <div class="library-vido-meta flex flex-center-v gap-5">
+                <div class="profile-picture">
+                    <img src="images/profil/espero.jpg" alt="">
+                </div>
+                <div class="meta-video">
+                    <div class="video-title">Clonez le réseau social facebook en partant de zéro</div>
+                    <div class="owner-video-fulname">Web Design</div>
+                    <div class="video-meta-data flex">
+                        <div class="video-meta-views">542 views &nbsp;</div>
+                        <div class="video-meta-time"> &nbsp;il y'a 21 heures</div>
+                    </div>
+                </div>
+            </div>
+             </div>
+             <div class="library-item flex flex-column relative">
+                <div class="library-video-poster">
+                    <img src="images/poster/1.jpg" alt="Poster video">
+                    <i class="fab fa-youtube absolute element-center"></i>
+                </div>
+                <div class="library-vido-meta flex flex-center-v gap-5">
+                    <div class="profile-picture">
+                        <img src="images/profil/espero.jpg" alt="">
+                    </div>
+                    <div class="meta-video">
+                        <div class="video-title">Clonez le réseau social facebook en partant de zéro</div>
+                        <div class="owner-video-fulname">Web Design</div>
+                        <div class="video-meta-data flex">
+                            <div class="video-meta-views">542 views &nbsp;</div>
+                            <div class="video-meta-time"> &nbsp;il y'a 21 heures</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="library-item flex flex-column relative">
+                <div class="library-video-poster">
+                    <img src="images/poster/1.jpg" alt="Poster video">
+                    <i class="fab fa-youtube absolute element-center"></i>
+                </div>
+                <div class="library-vido-meta flex flex-center-v gap-5">
+                    <div class="profile-picture">
+                        <img src="images/profil/espero.jpg" alt="">
+                    </div>
+                    <div class="meta-video">
+                        <div class="video-title">Clonez le réseau social facebook en partant de zéro</div>
+                        <div class="owner-video-fulname">Web Design</div>
+                        <div class="video-meta-data flex">
+                            <div class="video-meta-views">542 views &nbsp;</div>
+                            <div class="video-meta-time"> &nbsp;il y'a 21 heures</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="library-item flex flex-column relative">
+                <div class="library-video-poster">
+                    <img src="images/poster/1.jpg" alt="Poster video">
+                    <i class="fab fa-youtube absolute element-center"></i>
+                </div>
+                <div class="library-vido-meta flex flex-center-v gap-5">
+                    <div class="profile-picture">
+                        <img src="images/profil/espero.jpg" alt="">
+                    </div>
+                    <div class="meta-video">
+                        <div class="video-title">Clonez le réseau social facebook en partant de zéro</div>
+                        <div class="owner-video-fulname">Web Design</div>
+                        <div class="video-meta-data flex">
+                            <div class="video-meta-views">542 views &nbsp;</div>
+                            <div class="video-meta-time"> &nbsp;il y'a 21 heures</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="paginate flex flex-center-h gap-5">
+            <div class="paginate-item text-center">
+                &lt;
+            </div>
+            <div class="paginate-item text-center ">
+                1
+            </div>
+            <div class="paginate-item text-center active">
+                2
+            </div>
+            <div class="paginate-item text-center">
+                &gt;
+            </div>
+        </div>
+    </div>
     <footer>FOOTER</footer>
     <script src="assets/js/script.js"></script>
 </body>
