finalisation de l'interface

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="shortcut icon" href="assets/image/logo/logo.svg" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <div class="header-top flex">
+    <header class="sticky">
+        <div class="header-top box flex">
             <div class="header-top-left flex-1 flex flex-center-v">
                 <div class="header-icon p-1" id="collapse"><i class="fas fa-bars"></i></div>
                 <a href="#">
@@ -175,7 +175,92 @@
             </div>
         </div>
     </div>
-    <footer>FOOTER</footer>
+    <footer>
+        <div class="footer-header flex flex-center-h flex-center-v gap-10">
+            <i class="fab fa-youtube"></i>
+            <h4>Ouitube</h4>
+        </div>
+        <div class="footer-content">
+            <div class="footer-content footer-m">
+                <div class="footer-list-menu flex flex-center gap-10">
+               
+                    <div class="menu-list-item flex-1">
+                        <h5>Product</h5>
+                        <ul>
+                            <li><a href="#">Video Player</a></li>
+                            <li><a href="#">Create</a></li>
+                            <li><a href="#">Ott Ressources</a></li>
+                            <li><a href="#">Developpers</a></li>
+                            <li><a href="#">Students</a></li>
+                            <li><a href="#">Monétization</a></li>
+                        </ul>
+                    </div>
+                    <div class="menu-list-item flex-1">
+                        <h5>Ressource</h5>
+                        <ul>
+                            <li><a href="#">Helper Center</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Live Streaming</a></li>
+                            <li><a href="#">Screen Recorder</a></li>
+                            <li><a href="#">Collaboration</a></li>
+                            <li><a href="#">Monétization</a></li>
+                        </ul>
+                    </div>
+                    <div class="menu-list-item flex-1">
+                        <h5>Affliate</h5>
+                        <ul>
+                            <li><a href="#">Video Player</a></li>
+                            <li><a href="#">Create</a></li>
+                            <li><a href="#">Live Streaming</a></li>
+                            <li><a href="#">Screen Recorder</a></li>
+                            <li><a href="#">Collaboration</a></li>
+                            <li><a href="#">Monétization</a></li>
+                        </ul>
+                    </div>
+                    <div class="menu-list-item flex-1">
+                        <h5>Quick</h5>
+                        <ul>
+                            <li><a href="#">Video Player</a></li>
+                            <li><a href="#">Create</a></li>
+                            <li><a href="#">Live Streaming</a></li>
+                            <li><a href="#">Screen Recorder</a></li>
+                            <li><a href="#">Collaboration</a></li>
+                            <li><a href="#">Monétization</a></li>
+                        </ul>
+                    </div>
+                    <div class="menu-list-item flex-1">
+                        <h5>Contact</h5>
+                        <ul>
+                            <li><a href="#">Become a partner</a></li>
+                            <li><a href="#">Guidlines</a></li>
+                            <li><a href="#">Live Streaming</a></li>
+                            <li><a href="#">Hosting &amp; Mangement</a></li>
+                            <li><a href="#">Montezation</a></li>
+                            <li><a href="#">Collebration</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-social-icon flex">
+                <div class="social-icon flex  flex-center-v flex-1">
+                    <ul class="flex gap-5">
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fab fa-linkedin"></i></a></li>       
+                    </ul>
+                </div>
+                <div class="app-icon flex-1">
+                    <a href="#"><img src="images/logo/playstore.png" alt=""></a>
+                    <a href="#"><img src="images/logo/appstore.png" alt=""></a>
+                    
+                </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom flex flex-center-h flex-center-v">
+            Copyright &copy; 2021 Ouitube All right Reserved
+        </div>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
